syntax = "proto3";

package infra.resilience.v1;

option go_package = "github.com/auth-platform/api/proto/infra/resilience/v1";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

// ResilienceService provides resilience patterns for protected services.
service ResilienceService {
  // ExecuteWithResilience executes a request with resilience policy applied.
  rpc ExecuteWithResilience(ExecuteRequest) returns (ExecuteResponse);

  // GetCircuitState returns the current circuit breaker state for a service.
  rpc GetCircuitState(GetCircuitStateRequest) returns (GetCircuitStateResponse);

  // UpdatePolicy updates or creates a resilience policy.
  rpc UpdatePolicy(UpdatePolicyRequest) returns (UpdatePolicyResponse);

  // GetPolicy retrieves a resilience policy by name.
  rpc GetPolicy(GetPolicyRequest) returns (GetPolicyResponse);

  // GetHealth returns aggregated health status.
  rpc GetHealth(GetHealthRequest) returns (GetHealthResponse);

  // WatchCircuitState streams circuit breaker state changes.
  rpc WatchCircuitState(WatchCircuitStateRequest) returns (stream CircuitStateEvent);
}

// ExecuteRequest contains the request to execute with resilience.
message ExecuteRequest {
  string policy_name = 1;
  string target_service = 2;
  string operation = 3;
  bytes payload = 4;
  map<string, string> metadata = 5;
}

// ExecuteResponse contains the result of the resilience-protected execution.
message ExecuteResponse {
  bool success = 1;
  bytes payload = 2;
  ResilienceMetrics metrics = 3;
  string error_message = 4;
  ErrorCode error_code = 5;
}

// ResilienceMetrics contains metrics from the resilience operation.
message ResilienceMetrics {
  int32 retry_count = 1;
  google.protobuf.Duration total_duration = 2;
  CircuitState circuit_state = 3;
  bool rate_limited = 4;
}

// GetCircuitStateRequest requests circuit breaker state.
message GetCircuitStateRequest {
  string service_name = 1;
}

// GetCircuitStateResponse contains circuit breaker state.
message GetCircuitStateResponse {
  string service_name = 1;
  CircuitState state = 2;
  int32 failure_count = 3;
  int32 success_count = 4;
  google.protobuf.Timestamp last_state_change = 5;
  int64 version = 6;
}

// CircuitState represents the circuit breaker state.
enum CircuitState {
  CIRCUIT_STATE_UNSPECIFIED = 0;
  CIRCUIT_STATE_CLOSED = 1;
  CIRCUIT_STATE_OPEN = 2;
  CIRCUIT_STATE_HALF_OPEN = 3;
}

// UpdatePolicyRequest contains the policy to update.
message UpdatePolicyRequest {
  ResiliencePolicy policy = 1;
}

// UpdatePolicyResponse confirms the policy update.
message UpdatePolicyResponse {
  bool success = 1;
  int32 version = 2;
  string error_message = 3;
}

// GetPolicyRequest requests a policy by name.
message GetPolicyRequest {
  string name = 1;
}

// GetPolicyResponse contains the requested policy.
message GetPolicyResponse {
  ResiliencePolicy policy = 1;
}

// ResiliencePolicy defines resilience settings.
message ResiliencePolicy {
  string name = 1;
  int32 version = 2;
  CircuitBreakerConfig circuit_breaker = 3;
  RetryConfig retry = 4;
  TimeoutConfig timeout = 5;
  RateLimitConfig rate_limit = 6;
  BulkheadConfig bulkhead = 7;
}

// CircuitBreakerConfig defines circuit breaker behavior.
message CircuitBreakerConfig {
  int32 failure_threshold = 1;
  int32 success_threshold = 2;
  google.protobuf.Duration timeout = 3;
  int32 probe_count = 4;
}

// RetryConfig defines retry behavior.
message RetryConfig {
  int32 max_attempts = 1;
  google.protobuf.Duration base_delay = 2;
  google.protobuf.Duration max_delay = 3;
  double multiplier = 4;
  double jitter_percent = 5;
  repeated string retryable_errors = 6;
}

// TimeoutConfig defines timeout behavior.
message TimeoutConfig {
  google.protobuf.Duration default_timeout = 1;
  google.protobuf.Duration max_timeout = 2;
  map<string, google.protobuf.Duration> per_operation = 3;
}

// RateLimitConfig defines rate limiting behavior.
message RateLimitConfig {
  RateLimitAlgorithm algorithm = 1;
  int32 limit = 2;
  google.protobuf.Duration window = 3;
  int32 burst_size = 4;
}

// RateLimitAlgorithm defines the rate limiting algorithm.
enum RateLimitAlgorithm {
  RATE_LIMIT_ALGORITHM_UNSPECIFIED = 0;
  RATE_LIMIT_ALGORITHM_TOKEN_BUCKET = 1;
  RATE_LIMIT_ALGORITHM_SLIDING_WINDOW = 2;
}

// BulkheadConfig defines bulkhead behavior.
message BulkheadConfig {
  int32 max_concurrent = 1;
  int32 max_queue = 2;
  google.protobuf.Duration queue_timeout = 3;
}

// GetHealthRequest requests health status.
message GetHealthRequest {
  string service_name = 1; // Optional: specific service, empty for all
}

// GetHealthResponse contains health status.
message GetHealthResponse {
  HealthStatus status = 1;
  map<string, ServiceHealth> services = 2;
  google.protobuf.Timestamp timestamp = 3;
}

// HealthStatus represents overall health.
enum HealthStatus {
  HEALTH_STATUS_UNSPECIFIED = 0;
  HEALTH_STATUS_HEALTHY = 1;
  HEALTH_STATUS_DEGRADED = 2;
  HEALTH_STATUS_UNHEALTHY = 3;
}

// ServiceHealth represents health of a single service.
message ServiceHealth {
  string name = 1;
  HealthStatus status = 2;
  string message = 3;
  google.protobuf.Timestamp last_check = 4;
}

// WatchCircuitStateRequest requests circuit state streaming.
message WatchCircuitStateRequest {
  repeated string service_names = 1; // Empty for all services
}

// CircuitStateEvent represents a circuit state change.
message CircuitStateEvent {
  string service_name = 1;
  CircuitState previous_state = 2;
  CircuitState new_state = 3;
  google.protobuf.Timestamp timestamp = 4;
  string correlation_id = 5;
}

// ErrorCode represents resilience error types.
enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_CIRCUIT_OPEN = 1;
  ERROR_CODE_RATE_LIMIT_EXCEEDED = 2;
  ERROR_CODE_TIMEOUT = 3;
  ERROR_CODE_BULKHEAD_FULL = 4;
  ERROR_CODE_RETRY_EXHAUSTED = 5;
  ERROR_CODE_INVALID_POLICY = 6;
  ERROR_CODE_SERVICE_UNAVAILABLE = 7;
}
